--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mapbox-gl": "^2.6.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
