--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
+    "dayjs": "^1.10.7",
     "mapbox-gl": "^2.6.1",
     "vue": "^3.2.25"
   },
